--- a/src/jumpball.csproj
+++ b/src/jumpball.csproj
@@ -90,6 +90,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
+    <Reference Include="ShinobiEssentials">
+      <HintPath>..\lib\ShinobiEssentials.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
