--- a/src/jumpball.csproj
+++ b/src/jumpball.csproj
@@ -93,6 +93,7 @@
     <Reference Include="ShinobiEssentials">
       <HintPath>..\lib\ShinobiEssentials.dll</HintPath>
     </Reference>
+    <Reference Include="MonoTouch.Dialog-1" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
