--- a/src/Info.plist
+++ b/src/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>jumpball</string>
+	<string>Jumpball</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.odessian.jumpball</string>
 	<key>CFBundleShortVersionString</key>
